# obs-lottie

./: CMakeLists.txt  README.md  buildspec.json
.github/scripts/: Build-Windows.ps1
.github/scripts/utils.pwsh/: Setup-Obs.ps1
.github/workflows/: main.yml
cmake/: ObsPluginHelpers.cmake
data/locale/: en-US.ini
src/: obs-lottie.cpp
